crates/ruff_python_parser/tests/snapshots/invalid_syntax@match_stmt_missing_pattern.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/err/match_stmt_missing_pattern.py
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(None),
        range: 0..24,
        body: Suite {
            range: 0..24,
            node_index: NodeIndex(None),
            statements: [
                Match(
                    StmtMatch {
                        node_index: NodeIndex(None),
                        range: 0..23,
                        subject: Name(
                            ExprName {
                                node_index: NodeIndex(None),
                                range: 6..7,
                                id: Name("x"),
                                ctx: Load,
                            },
                        ),
                        cases: [
                            MatchCase {
                                range: 13..23,
                                node_index: NodeIndex(None),
                                pattern: MatchValue(
                                    PatternMatchValue {
                                        node_index: NodeIndex(None),
                                        range: 17..17,
                                        value: Name(
                                            ExprName {
                                                node_index: NodeIndex(None),
                                                range: 17..17,
                                                id: Name(""),
                                                ctx: Invalid,
                                            },
                                        ),
                                    },
                                ),
                                guard: None,
                                body: Suite {
                                    range: 20..23,
                                    node_index: NodeIndex(None),
                                    statements: [
                                        Expr(
                                            StmtExpr {
                                                node_index: NodeIndex(None),
                                                range: 20..23,
                                                value: EllipsisLiteral(
                                                    ExprEllipsisLiteral {
                                                        node_index: NodeIndex(None),
                                                        range: 20..23,
                                                    },
                                                ),
                                            },
                                        ),
                                    ],
                                },
                            },
                        ],
                    },
                ),
            ],
        },
    },
)
```
## Errors

  |
1 | match x:
2 |     case : ...
  |          ^ Syntax Error: Expected a pattern
  |
