crates/ruff_python_parser/tests/snapshots/invalid_syntax@match_stmt_single_starred_subject.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/err/match_stmt_single_starred_subject.py
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(None),
        range: 0..28,
        body: Suite {
            range: 0..28,
            node_index: NodeIndex(None),
            statements: [
                Match(
                    StmtMatch {
                        node_index: NodeIndex(None),
                        range: 0..27,
                        subject: Starred(
                            ExprStarred {
                                node_index: NodeIndex(None),
                                range: 6..10,
                                value: Name(
                                    ExprName {
                                        node_index: NodeIndex(None),
                                        range: 7..10,
                                        id: Name("foo"),
                                        ctx: Load,
                                    },
                                ),
                                ctx: Load,
                            },
                        ),
                        cases: [
                            MatchCase {
                                range: 16..27,
                                node_index: NodeIndex(None),
                                pattern: MatchAs(
                                    PatternMatchAs {
                                        node_index: NodeIndex(None),
                                        range: 21..22,
                                        pattern: None,
                                        name: None,
                                    },
                                ),
                                guard: None,
                                body: Suite {
                                    range: 24..27,
                                    node_index: NodeIndex(None),
                                    statements: [
                                        Expr(
                                            StmtExpr {
                                                node_index: NodeIndex(None),
                                                range: 24..27,
                                                value: EllipsisLiteral(
                                                    ExprEllipsisLiteral {
                                                        node_index: NodeIndex(None),
                                                        range: 24..27,
                                                    },
                                                ),
                                            },
                                        ),
                                    ],
                                },
                            },
                        ],
                    },
                ),
            ],
        },
    },
)
```
## Errors

  |
1 | match *foo:
  |       ^^^^ Syntax Error: Starred expression cannot be used here
2 |     case _: ...
  |
