crates/ruff_python_parser/tests/snapshots/invalid_syntax@mixed_bytes_and_non_bytes_literals.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/err/mixed_bytes_and_non_bytes_literals.py
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(None),
        range: 0..64,
        body: Suite {
            range: 0..64,
            node_index: NodeIndex(None),
            statements: [
                Expr(
                    StmtExpr {
                        node_index: NodeIndex(None),
                        range: 0..17,
                        value: StringLiteral(
                            ExprStringLiteral {
                                node_index: NodeIndex(None),
                                range: 0..17,
                                value: StringLiteralValue {
                                    inner: Concatenated(
                                        ConcatenatedStringLiteral {
                                            strings: [
                                                StringLiteral {
                                                    range: 0..7,
                                                    node_index: NodeIndex(None),
                                                    value: "first",
                                                    flags: StringLiteralFlags {
                                                        quote_style: Single,
                                                        prefix: Empty,
                                                        triple_quoted: false,
                                                        unclosed: false,
                                                    },
                                                },
                                                StringLiteral {
                                                    range: 8..17,
                                                    node_index: NodeIndex(None),
                                                    value: "",
                                                    flags: StringLiteralFlags {
                                                        quote_style: Single,
                                                        prefix: Empty,
                                                        triple_quoted: false,
                                                        unclosed: false,
                                                    },
                                                },
                                            ],
                                            value: "first",
                                        },
                                    ),
                                },
                            },
                        ),
                    },
                ),
                Expr(
                    StmtExpr {
                        node_index: NodeIndex(None),
                        range: 18..36,
                        value: FString(
                            ExprFString {
                                node_index: NodeIndex(None),
                                range: 18..36,
                                value: FStringValue {
                                    inner: Concatenated(
                                        [
                                            FString(
                                                FString {
                                                    range: 18..26,
                                                    node_index: NodeIndex(None),
                                                    elements: [
                                                        Literal(
                                                            InterpolatedStringLiteralElement {
                                                                range: 20..25,
                                                                node_index: NodeIndex(None),
                                                                value: "first",
                                                            },
                                                        ),
                                                    ],
                                                    flags: FStringFlags {
                                                        quote_style: Single,
                                                        prefix: Regular,
                                                        triple_quoted: false,
                                                        unclosed: false,
                                                    },
                                                },
                                            ),
                                            Literal(
                                                StringLiteral {
                                                    range: 27..36,
                                                    node_index: NodeIndex(None),
                                                    value: "",
                                                    flags: StringLiteralFlags {
                                                        quote_style: Single,
                                                        prefix: Empty,
                                                        triple_quoted: false,
                                                        unclosed: false,
                                                    },
                                                },
                                            ),
                                        ],
                                    ),
                                },
                            },
                        ),
                    },
                ),
                Expr(
                    StmtExpr {
                        node_index: NodeIndex(None),
                        range: 37..63,
                        value: FString(
                            ExprFString {
                                node_index: NodeIndex(None),
                                range: 37..63,
                                value: FStringValue {
                                    inner: Concatenated(
                                        [
                                            Literal(
                                                StringLiteral {
                                                    range: 37..44,
                                                    node_index: NodeIndex(None),
                                                    value: "first",
                                                    flags: StringLiteralFlags {
                                                        quote_style: Single,
                                                        prefix: Empty,
                                                        triple_quoted: false,
                                                        unclosed: false,
                                                    },
                                                },
                                            ),
                                            FString(
                                                FString {
                                                    range: 45..54,
                                                    node_index: NodeIndex(None),
                                                    elements: [
                                                        Literal(
                                                            InterpolatedStringLiteralElement {
                                                                range: 47..53,
                                                                node_index: NodeIndex(None),
                                                                value: "second",
                                                            },
                                                        ),
                                                    ],
                                                    flags: FStringFlags {
                                                        quote_style: Single,
                                                        prefix: Regular,
                                                        triple_quoted: false,
                                                        unclosed: false,
                                                    },
                                                },
                                            ),
                                            Literal(
                                                StringLiteral {
                                                    range: 55..63,
                                                    node_index: NodeIndex(None),
                                                    value: "",
                                                    flags: StringLiteralFlags {
                                                        quote_style: Single,
                                                        prefix: Empty,
                                                        triple_quoted: false,
                                                        unclosed: false,
                                                    },
                                                },
                                            ),
                                        ],
                                    ),
                                },
                            },
                        ),
                    },
                ),
            ],
        },
    },
)
```
## Errors

  |
1 | 'first' b'second'
  | ^^^^^^^^^^^^^^^^^ Syntax Error: Bytes literal cannot be mixed with non-bytes literals
2 | f'first' b'second'
3 | 'first' f'second' b'third'
  |


  |
1 | 'first' b'second'
2 | f'first' b'second'
  | ^^^^^^^^^^^^^^^^^^ Syntax Error: Bytes literal cannot be mixed with non-bytes literals
3 | 'first' f'second' b'third'
  |


  |
1 | 'first' b'second'
2 | f'first' b'second'
3 | 'first' f'second' b'third'
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^ Syntax Error: Bytes literal cannot be mixed with non-bytes literals
  |
